--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   },
   "require": {
-    "illuminate/support": "^7|^8|^9"
+    "illuminate/support": "^7|^8|^9|^10"
   },
   "extra": {
     "laravel": {
